--- a/CobroCoactivo/web/paginas/gestionUsuarios/detalleUsuario.xhtml
+++ b/CobroCoactivo/web/paginas/gestionUsuarios/detalleUsuario.xhtml
@@ -32,7 +32,7 @@
                                                 </li>
                                             </ul>
                                             <h:commandLink class="btn btn-danger btn-block" onclick="$('#modalRestablecerContraseña').modal('show');">
-                                                <b>Restablecer Contraseña</b>
+                                                <b>Actualizar Contraseña</b>
                                                 <f:ajax event="click" ></f:ajax>
                                             </h:commandLink>
                                         </div>
@@ -91,9 +91,9 @@
                                 <div class="col-md-9">
                                     <div class="nav-tabs-custom">
                                         <ul class="nav nav-tabs">
-                                            <li class="active"> <a href="#activity" data-toggle="tab">Permisos</a></li>
-                                            <li ><a href="#timeline" data-toggle="tab">Actividad</a></li>
-                                            <li><a href="#Modulos" data-toggle="tab">Modulos</a></li>
+                                            <!-- <li class="active"> <a href="#activity" data-toggle="tab">Permisos</a></li>
+                                             <li ><a href="#timeline" data-toggle="tab">Actividad</a></li> -->
+                                            <li><a href="#Modulos" data-toggle="tab">Modulos</a></li> 
                                         </ul>
                                         <div class="tab-content">
                                             <div class="tab-pane" id="activity">
