--- a/CobroCoactivo/web/paginas/gestionPersonas/gestionPersona.xhtml
+++ b/CobroCoactivo/web/paginas/gestionPersonas/gestionPersona.xhtml
@@ -51,7 +51,7 @@
                                                                     <label class="control-label align-left">Numero</label>
                                                                 </div>
                                                             </div>
-                                                            <div class="col-lg-5 visible-lg visible-md" style="width: 18%">
+                                                            <div class="col-lg-5 visible-lg visible-md" style="width: 21%">
                                                                 <div class="input-group margin-2">
                                                                     <h:selectOneMenu  id="sltDocumentos" class="form-control" value="#{gestionPersonaBean.tipoDocumentoPersona}">
                                                                         <f:selectItems value="#{gestionPersonaBean.listTipoDocumento}" var="tipoDocumento" itemValue="#{tipoDocumento.codigo}" itemLabel="#{tipoDocumento.descripcion}"></f:selectItems>
@@ -60,7 +60,7 @@
                                                             </div>
                                                             <div class="col-md-3 col-lg-3 col-sm-12 col-xs-12">
                                                                 <div class="input-group margin-5">
-                                                                    <input placeholder="Ingrese el documento" type="number" class="form-control" maxlength="15" jsf:id="txtNumero" jsf:value="#{gestionPersonaBean.documentoPersona}" jsf:required="true" jsf:requiredMessage="Digite el numero de documento"></input>
+                                                                    <input placeholder="Ingrese el documento" type="text" class="form-control" maxlength="10" jsf:id="txtNumero" jsf:value="#{gestionPersonaBean.documentoPersona}" jsf:required="true" jsf:requiredMessage="Digite el numero de documento"></input>
                                                                     <span class="input-group-btn">
                                                                         <h:commandLink class="btn btn-info btn-danger" value="Buscar" >
                                                                             <f:ajax event="click" execute="frmPersonas:sltDocumentos frmPersonas:txtNumero" listener="#{gestionPersonaBean.buscarPersona(1)}" render="frmPersonas:tblPersona" ></f:ajax>
@@ -138,7 +138,7 @@
                                             <thead>
                                                 <tr>
                                                     <th class="col-md-3">Nombre</th>
-                                                    <th class="col-md-3">Sexo</th>
+                                                    <th class="col-md-3">Genero</th>
                                                     <th class="col-md-3">Estado</th>
                                                     <th class="col-md-3">Mostrar</th>
                                                 </tr>
